--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -278,6 +278,29 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- roobet solana-->
+            <div class="news-item">
+              <a
+                href="/News-Articles/Play_at_Roobet_with_Solana_(SOL)_Fast_Crypto_Casino/"
+              >
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/roobet-s-news.webp"
+                    width="300"
+                    height="200"
+                    alt="Mission Uncrossable Banner"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>Play at Roobet with Solana (SOL) | Fast Crypto Casino</h2>
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+
                  <!--betfury-100 free pins-->
             <div class="news-item">
               <a href="/News-Articles/BetFury-100-Free-Spins-No-Deposit">
