--- a/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/index.html
+++ b/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/index.html
@@ -53,9 +53,9 @@
                 {
                   "@type": "ListItem",
                   "position": 3,
-                  "name": "Avia Masters: The Ultimate Plane Game on Roobet"
+                  "name": "Avia Masters Game on Roobet"
       ",
-                  "item": "https://www.all4wins.com/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/"
+                   "https://www.all4wins.com/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/"
                 }
               ]
             }
@@ -223,7 +223,7 @@
     <div id="breadcrumbs" class="breadcrumbs">
       <a href="/">Home</a><span>&gt;</span
       ><a href="https://www.all4wins.com/News/">News</a><span>&gt;</span
-      ><span>Avia Masters: The Ultimate Plane Game on Roobet</span>
+      ><span>Avia Masters Game on Roobet</span>
     </div>
     <!-- 
 
