--- a/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/index.html
+++ b/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/index.html
@@ -34,31 +34,30 @@
     <title>Avia Masters Plane Game | How to Play & Demo on Roobet</title>
 
     <script type="application/ld+json">
-            {
-              "@context": "https://schema.org",
-              "@type": "BreadcrumbList",
-              "itemListElement": [
-                {
-                  "@type": "ListItem",
-                  "position": 1,
-                  "name": "Home",
-                  "item": "https://www.all4wins.com/"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 2,
-                  "name": "News",
-                  "item": "https://www.all4wins.com/News/"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 3,
-                  "name": "Avia Masters Game on Roobet"
-      ",
-                   "https://www.all4wins.com/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/"
-                }
-              ]
-            }
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://www.all4wins.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "News",
+            "item": "https://www.all4wins.com/News/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Avia Masters Game on Roobet",
+            "item": "https://www.all4wins.com/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/"
+          }
+        ]
+      }
     </script>
   </head>
   <body>
