--- a/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/index.html
+++ b/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/index.html
@@ -307,6 +307,10 @@
             and cautious players.
           </p>
 
+          <div class="missionU">
+            <img src="/img/news-banners/roobet-avia.webp" alt="roobet avia" />
+          </div>
+
           <p>
             Try the Avia Masters Demo
             <a
