json-ld structured data

--- a/index.html
+++ b/index.html
@@ -34,6 +34,46 @@
       All4Wins: Top Casino, Sports & Esports Betting FS, FB Offers and Generous
       WB!
     </title>
+
+    <!-- json -ld -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Organization",
+            "@id": "https://www.all4wins.com/#organization",
+            "name": "All4Wins",
+            "url": "https://www.all4wins.com/",
+            "logo": {
+              "@type": "ImageObject",
+              "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+              "width": 200,
+              "height": 200
+            },
+            "sameAs": [
+              "https://www.instagram.com/all4winss/",
+              "https://www.facebook.com/all4winss"
+            ]
+          },
+          {
+            "@type": "WebSite",
+            "url": "https://www.all4wins.com/",
+            "name": "All4Wins",
+            "publisher": {
+              "@type": "Organization",
+              "@id": "https://www.all4wins.com/#organization"
+            },
+            "potentialAction": {
+              "@type": "SearchAction",
+              "target": "https://www.all4wins.com/search?q={search_term_string}",
+              "query-input": "required name=search_term_string"
+            }
+          }
+        ]
+      }
+    </script>
+    <!-- end json -ld -->
   </head>
 
   <body>
