--- a/Bonuses/Cashback/index.html
+++ b/Bonuses/Cashback/index.html
@@ -52,6 +52,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Cashback Bonus Article -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "Get Money Back with The Best Online Casino Cashback Offers in 2025",
+        "description": "Discover the top cashback offers from leading online casinos to enhance your gaming experience.",
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.all4wins.com/Bonuses/Cashback/"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Cashback Bonus Article -->
   </head>
   <body>
     <div id="Bonus-Page-Background"></div>
