--- a/Bonuses/First-Deposit/index.html
+++ b/Bonuses/First-Deposit/index.html
@@ -54,6 +54,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for First Deposit Bonus Article -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "Best First Deposit Sign-Up Bonuses in 2025",
+        "description": "Explore top online casinos offering generous first deposit bonuses, including match percentages and free spins, to kickstart your gaming experience.",
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.all4wins.com/Bonuses/First-Deposit/"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for First Deposit Bonus Article -->
   </head>
   <body>
     <div id="Bonus-Page-Background"></div>
