--- a/Bonuses/No-Wagering/index.html
+++ b/Bonuses/No-Wagering/index.html
@@ -53,6 +53,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for No Wagering Bonus Article -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "No Wagering Casino Bonuses Explained",
+        "description": "Explore top no wagering bonuses from leading online casinos, allowing you to keep what you win without any playthrough requirements.",
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.all4wins.com/Bonuses/No-Wagering/"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for No Wagering Bonus Article -->
   </head>
 
   <body>
