--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -53,6 +53,118 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Casinos CollectionPage with All4Wins Organization -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Organization",
+            "@id": "https://www.all4wins.com/#organization",
+            "name": "All4Wins",
+            "url": "https://www.all4wins.com/",
+            "logo": {
+              "@type": "ImageObject",
+              "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+              "width": 200,
+              "height": 200
+            },
+            "sameAs": [
+              "https://www.instagram.com/all4winss/",
+              "https://www.facebook.com/all4winss"
+            ]
+          },
+          {
+            "@type": "CollectionPage",
+            "@id": "https://www.all4wins.com/Casinos/#collection",
+            "url": "https://www.all4wins.com/Casinos/",
+            "name": "Casinos",
+            "description": "Explore detailed reviews and promotions from the best online casinos.",
+            "mainEntity": {
+              "@type": "ItemList",
+              "itemListElement": [
+                {
+                  "@type": "ListItem",
+                  "position": 1,
+                  "url": "https://www.all4wins.com/Reviews-page/Roobet/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 2,
+                  "url": "https://www.all4wins.com/Reviews-page/BetFury/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 3,
+                  "url": "https://www.all4wins.com/Reviews-page/Wild.io/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 4,
+                  "url": "https://www.all4wins.com/Reviews-page/Thunderpick/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 5,
+                  "url": "https://www.all4wins.com/Reviews-page/GG.Bet/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 6,
+                  "url": "https://www.all4wins.com/Reviews-page/BC.Games/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 7,
+                  "url": "https://www.all4wins.com/Reviews-page/7Bit-Casino/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 8,
+                  "url": "https://www.all4wins.com/Reviews-page/Rabona/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 9,
+                  "url": "https://www.all4wins.com/Reviews-page/Vave/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 10,
+                  "url": "https://www.all4wins.com/Reviews-page/Wazamba/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 11,
+                  "url": "https://www.all4wins.com/Reviews-page/DuelBits/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 12,
+                  "url": "https://www.all4wins.com/Reviews-page/Katsubet/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 13,
+                  "url": "https://www.all4wins.com/Reviews-page/CloudBet/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 14,
+                  "url": "https://www.all4wins.com/Reviews-page/TrustDice/"
+                }
+              ]
+            },
+            "publisher": {
+              "@type": "Organization",
+              "@id": "https://www.all4wins.com/#organization"
+            }
+          }
+        ]
+      }
+    </script>
+    <!-- End JSON-LD for Casinos CollectionPage -->
   </head>
   <body>
     <div id="Casino-Background"></div>
