--- a/Esports/index.html
+++ b/Esports/index.html
@@ -53,6 +53,81 @@
         ]
       }
     </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Organization",
+            "@id": "https://www.all4wins.com/#organization",
+            "name": "All4Wins",
+            "url": "https://www.all4wins.com/",
+            "logo": {
+              "@type": "ImageObject",
+              "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+              "width": 200,
+              "height": 200
+            },
+            "sameAs": [
+              "https://www.instagram.com/all4winss/",
+              "https://www.facebook.com/all4winss"
+            ]
+          },
+          {
+            "@type": "CollectionPage",
+            "@id": "https://www.all4wins.com/Esports/#collection",
+            "url": "https://www.all4wins.com/Esports/",
+            "name": "Esports",
+            "description": "Discover top esports betting sites offering exclusive promotions and bonuses.",
+            "mainEntity": {
+              "@type": "ItemList",
+              "itemListElement": [
+                {
+                  "@type": "ListItem",
+                  "position": 1,
+                  "url": "https://www.all4wins.com/Reviews-page/Roobet/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 2,
+                  "url": "https://www.all4wins.com/Reviews-page/Thunderpick/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 3,
+                  "url": "https://www.all4wins.com/Reviews-page/Wild.io/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 4,
+                  "url": "https://www.all4wins.com/Reviews-page/GG.Bet/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 5,
+                  "url": "https://www.all4wins.com/Reviews-page/BC.GAME/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 6,
+                  "url": "https://www.all4wins.com/Reviews-page/CloudBet/"
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 7,
+                  "url": "https://www.all4wins.com/Reviews-page/TrustDice/"
+                }
+              ]
+            },
+            "publisher": {
+              "@type": "Organization",
+              "@id": "https://www.all4wins.com/#organization"
+            }
+          }
+        ]
+      }
+    </script>
   </head>
 
   <body>
