--- a/News-Articles/BC.Game-NFL-Playoffs-Two-Touchdown-Guarantee/index.html
+++ b/News-Articles/BC.Game-NFL-Playoffs-Two-Touchdown-Guarantee/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for ended BC.Game NFL Playoffs Two Touchdown Guarantee promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game NFL Playoffs Two Touchdown Guarantee",
+        "description": "Place a pre-match bet of at least $1 on any NFL playoff game. If your team scores two or more touchdowns but loses, receive a 100% refund up to $300 in Free Bet.",
+        "url": "https://www.all4wins.com/News-Articles/BC.Game-NFL-Playoffs-Two-Touchdown-Guarantee/",
+        "image": "https://www.all4wins.com/img/news-banners/bc.game-nfl-banner.webp",
+        "startDate": "2025-01-18",
+        "endDate": "2025-02-09",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.Game-NFL-Playoffs-Two-Touchdown-Guarantee/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-01-18",
+          "validThrough": "2025-02-09"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for ended BC.Game NFL Playoffs Two Touchdown Guarantee promotion -->
   </head>
   <body>
     <div id="news-background"></div>
