--- a/Reviews-page/GG.Bet/index.html
+++ b/Reviews-page/GG.Bet/index.html
@@ -54,6 +54,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Review for GG.Bet -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "GG.Bet",
+          "url": "https://www.all4wins.com/Reviews-page/GG.Bet/",
+          "image": "https://www.all4wins.com/img/news-banners/gg.bet-banner.webp",
+          "description": "GG.Bet is a crypto-friendly casino offering a wide variety of games, including slots, table games, live dealer options, and esports betting. The platform features a generous welcome bonus and a user-friendly interface.",
+          "brand": {
+            "@type": "Brand",
+            "name": "GG.Bet"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-12",
+        "reviewBody": "GG.Bet offers a comprehensive gaming experience with a diverse selection of games and a user-friendly interface. The platform provides various promotions and bonuses, including a generous welcome package. Some users have reported issues with account verification and withdrawal processes."
+      }
+    </script>
+    <!-- End JSON-LD Review for GG.Bet -->
   </head>
   <body>
     <div id="home-background"></div>
