--- a/Reviews-page/Roobet/index.html
+++ b/Reviews-page/Roobet/index.html
@@ -52,6 +52,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Review for Roobet -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "Roobet",
+          "url": "https://www.all4wins.com/Reviews-page/Roobet/",
+          "image": "https://www.all4wins.com/img/news-banners/roobet-banner4.webp",
+          "description": "Roobet is a licensed crypto casino offering over 6,300 games, a sportsbook, and unique house games like 'Mission Uncrossable'.",
+          "brand": {
+            "@type": "Brand",
+            "name": "Roobet"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-11",
+        "reviewBody": "Roobet offers a diverse gaming experience with a wide selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes."
+      }
+    </script>
+    <!-- End JSON-LD Review for Roobet -->
   </head>
   <body>
     <div id="home-background"></div>
