--- a/Reviews-page/Wazamba/index.html
+++ b/Reviews-page/Wazamba/index.html
@@ -54,6 +54,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Review for Wazamba -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "Wazamba",
+          "url": "https://www.all4wins.com/Reviews-page/Wazamba/",
+          "image": "https://www.all4wins.com/img/news-banners/wazamba-banner.webp",
+          "description": "Wazamba is a licensed online casino and sportsbook offering over 8,500 games, including slots, table games, live dealer options, and esports betting. The platform features a generous welcome bonus, weekly promotions, and a rewarding loyalty program.",
+          "brand": {
+            "@type": "Brand",
+            "name": "Wazamba"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-14",
+        "reviewBody": "Wazamba offers a diverse gaming and betting experience with a vast selection of games and a user-friendly interface. The platform provides various promotions, including a generous welcome bonus and a rewarding loyalty program. While most users report positive experiences, some have expressed concerns about withdrawal times and account verification processes."
+      }
+    </script>
+    <!-- End JSON-LD Review for Wazamba -->
   </head>
   <body>
     <div id="home-background"></div>
