--- a/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/index.html
+++ b/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/index.html
@@ -59,6 +59,34 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet Avia Masters game -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Game",
+        "name": "Avia Masters: The Ultimate Plane Game",
+        "description": "Experience the thrill of Avia Masters, a crash-style plane game where players bet on how long the plane will fly before it crashes. Available on Roobet.",
+        "url": "https://www.all4wins.com/News-Articles/Avia_Masters_The_ultimate_Plane_game_On_Roobet/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-avia-banner.webp",
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet Avia Masters game -->
   </head>
   <body>
     <div id="news-background"></div>
