--- a/News-Articles/BC.GAME-Horse-Racing-FreeBets/index.html
+++ b/News-Articles/BC.GAME-Horse-Racing-FreeBets/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for ended BC.GAME Horse Racing FreeBets promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.GAME Horse Racing FreeBets",
+        "description": "New members can earn up to $50 in FreeBets by making a qualifying deposit and placing a sports bet.",
+        "url": "https://www.all4wins.com/News-Articles/BC.GAME-Horse-Racing-FreeBets/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgames-horeseriding.webp",
+        "startDate": "2024-10-14",
+        "endDate": "2025-01-05",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.GAME-Horse-Racing-FreeBets/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-10-14",
+          "validThrough": "2025-01-05"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for ended BC.GAME Horse Racing FreeBets promotion -->
   </head>
   <body>
     <div id="news-background"></div>
