--- a/News-Articles/BC.Game-5-Major-Leagues-Begin/index.html
+++ b/News-Articles/BC.Game-5-Major-Leagues-Begin/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for ended BC.Game 5 Major Leagues Begin promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game 5 Major Leagues Begin",
+        "description": "Place at least $50 in single bets on the English Premier League, German Bundesliga, Spanish LaLiga, Italian Serie A, or French Ligue 1 and make a qualifying deposit to receive a Freebet reward.",
+        "url": "https://www.all4wins.com/News-Articles/BC.Game-5-Major-Leagues-Begin/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-5major-leagues.webp",
+        "startDate": "2025-01-13",
+        "endDate": "2025-03-30",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.Game-5-Major-Leagues-Begin/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-01-13",
+          "validThrough": "2025-03-30"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for ended BC.Game 5 Major Leagues Begin promotion -->
   </head>
   <body>
     <div id="news-background"></div>
