--- a/News-Articles/BC.Game-Cricket-Stake-Back-Challenge/index.html
+++ b/News-Articles/BC.Game-Cricket-Stake-Back-Challenge/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for ended BC.Game Cricket Stake Back Challenge promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game Cricket Stake Back Challenge",
+        "description": "Bet on England's Tour of India T20 matches and earn up to $100 in Freebets, win or lose.",
+        "url": "https://www.all4wins.com/News-Articles/BC.Game-Cricket-Stake-Back-Challenge/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-cricket.webp",
+        "startDate": "2025-01-20",
+        "endDate": "2025-02-12",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.Game-Cricket-Stake-Back-Challenge/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-01-20",
+          "validThrough": "2025-02-12"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for ended BC.Game Cricket Stake Back Challenge promotion -->
   </head>
   <body>
     <div id="news-background"></div>
