--- a/News-Articles/BC.Game-LCFC-Bet-Guaranteed/index.html
+++ b/News-Articles/BC.Game-LCFC-Bet-Guaranteed/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for ended BC.Game LCFC Bet Guaranteed promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game LCFC Bet Guaranteed",
+        "description": "Place qualifying bets on Leicester City Premier League matches and earn up to $500 in Freebets, win or lose.",
+        "url": "https://www.all4wins.com/News-Articles/BC.Game-LCFC-Bet-Guaranteed/",
+        "image": "https://www.all4wins.com/img/news-banners/BcGame-LCFC.webp",
+        "startDate": "2024-08-17",
+        "endDate": "2025-05-25",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.Game-LCFC-Bet-Guaranteed/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-08-17",
+          "validThrough": "2025-05-25"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for ended BC.Game LCFC Bet Guaranteed promotion -->
   </head>
   <body>
     <div id="news-background"></div>
