--- a/News-Articles/BC.Game-LoL-Worlds2024/index.html
+++ b/News-Articles/BC.Game-LoL-Worlds2024/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for ended BC.Game LoL Worlds 2024 promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game LoL Worlds 2024",
+        "description": "Bet on the 2024 League of Legends World Championship and complete weekly tasks to earn Free Bets.",
+        "url": "https://www.all4wins.com/News-Articles/BC.Game-LoL-Worlds2024/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-worlds2024.webp",
+        "startDate": "2024-09-23",
+        "endDate": "2024-11-03",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.Game-LoL-Worlds2024/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-09-23",
+          "validThrough": "2024-11-03"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for ended BC.Game LoL Worlds 2024 promotion -->
   </head>
   <body>
     <div id="news-background"></div>
