--- a/News-Articles/BC.Game-Mining-Rush/index.html
+++ b/News-Articles/BC.Game-Mining-Rush/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for ended BC.Game Mining Rush promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game Mining Rush",
+        "description": "Participate in BC.Game's Mining Rush event to win a share of a 1 billion $BC token prize pool by placing daily wagers of $1 or more.",
+        "url": "https://www.all4wins.com/News-Articles/BC.Game-Mining-Rush/",
+        "image": "https://www.all4wins.com/img/news-banners/bc-mining.webp",
+        "startDate": "2024-10-01",
+        "endDate": "2024-10-20",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.Game-Mining-Rush/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-10-01",
+          "validThrough": "2024-10-20"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for ended BC.Game Mining Rush promotion -->
   </head>
   <body>
     <div id="news-background"></div>
