--- a/News-Articles/BC.Game_Esports_Masters_Challenge/index.html
+++ b/News-Articles/BC.Game_Esports_Masters_Challenge/index.html
@@ -62,6 +62,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for ended BC.Game Esports Masters Challenge promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game Esports Masters Challenge",
+        "description": "Participate in the BC.Game Esports Masters Challenge by placing real-money bets on eligible esports matches to win a share of $1,000 in Free Bets.",
+        "url": "https://www.all4wins.com/News-Articles/BC.Game_Esports_Masters_Challenge/",
+        "image": "https://www.all4wins.com/img/news-banners/BCGame_master_banner.webp",
+        "startDate": "2025-06-02",
+        "endDate": "2025-06-16",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.Game_Esports_Masters_Challenge/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-06-02",
+          "validThrough": "2025-06-16"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for ended BC.Game Esports Masters Challenge promotion -->
   </head>
   <body>
     <div id="news-background"></div>
