--- a/Reviews-page/7Bit-Casino/index.html
+++ b/Reviews-page/7Bit-Casino/index.html
@@ -52,6 +52,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Review for 7Bit Casino -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "7Bit Casino",
+          "url": "https://www.all4wins.com/Reviews-page/7Bit-Casino/",
+          "image": "https://www.all4wins.com/img/news-banners/7bitcasino-banner.webp",
+          "description": "7Bit Casino is a crypto-friendly platform offering a massive game selection, live dealer games, and generous welcome bonuses up to $10,800 plus 250 free spins.",
+          "brand": {
+            "@type": "Brand",
+            "name": "7Bit Casino"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-10",
+        "reviewBody": "7Bit Casino provides an extensive collection of games, including slots, table games, and live dealer experiences. The platform supports crypto payments and offers various promotions, including a welcome bonus of 325% up to $10,800 plus 250 free spins."
+      }
+    </script>
+    <!-- End JSON-LD Review for 7Bit Casino -->
   </head>
   <body>
     <div id="home-background"></div>
