--- a/Reviews-page/BC.Games/index.html
+++ b/Reviews-page/BC.Games/index.html
@@ -52,6 +52,35 @@
         ]
       }
     </script>
+    <!-- JSON-LD Review for BC.Games -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "BC.Games",
+          "url": "https://www.all4wins.com/Reviews-page/BC.Games/",
+          "image": "https://www.all4wins.com/img/news-banners/BCGAMES-Banner.gif",
+          "description": "BC.Games is a community-driven crypto casino offering a vast selection of games, including slots, table games, and live dealer options. Players can enjoy a wide range of promotions and bonuses, including a generous welcome package.",
+          "brand": {
+            "@type": "Brand",
+            "name": "BC.Games"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-10",
+        "reviewBody": "BC.Games offers a diverse gaming experience with a strong community focus. The platform provides a variety of games, including exclusive titles, and supports multiple cryptocurrencies. While the site offers attractive bonuses, some users have reported issues with account verification and bonus eligibility."
+      }
+    </script>
+    <!-- End JSON-LD Review for BC.Games -->
   </head>
   <body>
     <div id="home-background"></div>
