--- a/Reviews-page/BetFury/index.html
+++ b/Reviews-page/BetFury/index.html
@@ -47,6 +47,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Review for BetFury -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "BetFury",
+          "url": "https://www.all4wins.com/Reviews-page/BetFury/",
+          "image": "https://www.all4wins.com/img/news-banners/BetFury-banner.webp",
+          "description": "BetFury is a licensed crypto casino offering over 6,000 games, including slots, table games, and exclusive in-house titles. The platform features a unique rank system, cashback rewards, and supports multiple cryptocurrencies.",
+          "brand": {
+            "@type": "Brand",
+            "name": "BetFury"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-15",
+        "reviewBody": "BetFury offers a diverse gaming experience with a wide selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes."
+      }
+    </script>
+    <!-- End JSON-LD Review for BetFury -->
   </head>
   <body>
     <div id="home-background"></div>
