--- a/Reviews-page/CloudBet/index.html
+++ b/Reviews-page/CloudBet/index.html
@@ -54,6 +54,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Review for CloudBet -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "CloudBet",
+          "url": "https://www.all4wins.com/Reviews-page/CloudBet/",
+          "image": "https://www.all4wins.com/img/news-banners/cloudBet-banner.webp",
+          "description": "CloudBet is a crypto-friendly casino offering a wide variety of games, live dealer experiences, and high withdrawal limits. The platform features a range of promotions and a strong focus on security.",
+          "brand": {
+            "@type": "Brand",
+            "name": "CloudBet"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-12",
+        "reviewBody": "CloudBet provides a comprehensive gaming experience with an emphasis on crypto support and live dealer games. The platform offers high withdrawal limits and a variety of promotions for players."
+      }
+    </script>
+    <!-- End JSON-LD Review for CloudBet -->
   </head>
   <body>
     <div id="home-background"></div>
