--- a/Reviews-page/DuelBits/index.html
+++ b/Reviews-page/DuelBits/index.html
@@ -51,6 +51,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Review for DuelBits -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "DuelBits",
+          "url": "https://www.all4wins.com/Reviews-page/DuelBits/",
+          "image": "https://www.all4wins.com/img/news-banners/duelbits-banner.webp",
+          "description": "DuelBits is a crypto-friendly casino and sportsbook offering over 6,000 games, including slots, table games, live dealer options, and unique in-house games like Crash and Dice Duel.",
+          "brand": {
+            "@type": "Brand",
+            "name": "DuelBits"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-12",
+        "reviewBody": "DuelBits offers a diverse gaming experience with a wide selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes."
+      }
+    </script>
+    <!-- End JSON-LD Review for DuelBits -->
   </head>
   <body>
     <div id="home-background"></div>
