--- a/Reviews-page/Katsubet/index.html
+++ b/Reviews-page/Katsubet/index.html
@@ -57,6 +57,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Review for KatsuBet -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "KatsuBet",
+          "url": "https://www.all4wins.com/Reviews-page/Katsubet/",
+          "image": "https://www.all4wins.com/img/news-banners/Katsubet-banner.webp",
+          "description": "KatsuBet is a crypto-friendly online casino offering over 7,000 games, including slots, table games, and live dealer options. The platform features a generous welcome package, weekly promotions, and a rewarding VIP program.",
+          "brand": {
+            "@type": "Brand",
+            "name": "KatsuBet"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-13",
+        "reviewBody": "KatsuBet offers a diverse gaming experience with a vast selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes."
+      }
+    </script>
+    <!-- End JSON-LD Review for KatsuBet -->
   </head>
   <body>
     <div id="home-background"></div>
