--- a/Reviews-page/Loot.bet/index.html
+++ b/Reviews-page/Loot.bet/index.html
@@ -50,6 +50,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Review for Loot.Bet -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "Loot.Bet",
+          "url": "https://www.all4wins.com/Reviews-page/Loot.bet/",
+          "image": "https://www.all4wins.com/img/news-banners/loot.bet-banner.webp",
+          "description": "Loot.Bet was an esports-focused online casino offering a variety of games and betting options. However, as of early 2025, the platform has ceased operations and is no longer accessible.",
+          "brand": {
+            "@type": "Brand",
+            "name": "Loot.Bet"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-12",
+        "reviewBody": "Loot.Bet was once a popular esports betting platform, but as of early 2025, the site has gone offline without prior notice. Users have reported issues with pending withdrawals and unresponsive customer support. The prolonged downtime and lack of communication suggest that the casino has ceased operations. Players are advised to contact relevant authorities or consumer protection services if they are unable to withdraw their funds."
+      }
+    </script>
+    <!-- End JSON-LD Review for Loot.Bet -->
   </head>
   <body>
     <div id="home-background"></div>
