--- a/Reviews-page/Wild.io/index.html
+++ b/Reviews-page/Wild.io/index.html
@@ -52,6 +52,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Review for Wild.io -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Review",
+        "itemReviewed": {
+          "@type": "Casino",
+          "name": "Wild.io",
+          "url": "https://www.all4wins.com/Reviews-page/Wild.io/",
+          "image": "https://www.all4wins.com/img/news-banners/wild.io-banner.webp",
+          "description": "Wild.io is a licensed cryptocurrency casino and sportsbook offering over 3,500 games, including slots, table games, live dealer options, and esports betting. The platform features a generous welcome bonus, daily and weekly cashback offers, and a rewarding loyalty program.",
+          "brand": {
+            "@type": "Brand",
+            "name": "Wild.io"
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization"
+        },
+        "datePublished": "2024-08-15",
+        "reviewBody": "Wild.io offers a diverse gaming and betting experience with a vast selection of games and a user-friendly interface. The platform provides various promotions, including a generous welcome bonus and a rewarding loyalty program. While most users report positive experiences, some have expressed concerns about withdrawal times and account verification processes."
+      }
+    </script>
+    <!-- End JSON-LD Review for Wild.io -->
   </head>
   <body>
     <div id="home-background"></div>
