--- a/News-Articles/BCGame_Spadegaming_Tournament_570,700_Dolars_in_Prizes/index.html
+++ b/News-Articles/BCGame_Spadegaming_Tournament_570,700_Dolars_in_Prizes/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game Spadegaming Tournament -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game Spadegaming Tournament – $570,700 in Prizes",
+        "description": "Join BC.Game's Spadegaming Tournament and compete for a share of the $570,700 prize pool across 13 weekly events. Play Spadegaming's slot games and climb the leaderboard to win cash prizes up to $10,000 each week.",
+        "url": "https://www.all4wins.com/News-Articles/BCGame_Spadegaming_Tournament_570,700_Dolars_in_Prizes",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-tournament-playandwin-banner.webp",
+        "startDate": "2025-05-26",
+        "endDate": "2025-08-25",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BCGame_Spadegaming_Tournament_570,700_Dolars_in_Prizes",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-05-26",
+          "validThrough": "2025-08-25"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game Spadegaming Tournament -->
   </head>
   <body>
     <div id="news-background"></div>
