--- a/News-Articles/BC.GAME-Welcome-Lottery/index.html
+++ b/News-Articles/BC.GAME-Welcome-Lottery/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game Welcome Lottery promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game Welcome Lottery",
+        "description": "New players can win up to $100,000 by completing simple tasks and wagering real money at BC.Game. Redeem the promo code 'BCJACKPOT' to enter.",
+        "url": "https://www.all4wins.com/News-Articles/BC.GAME-Welcome-Lottery/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-welcome-lottery.webp",
+        "startDate": "2024-01-01",
+        "endDate": "2026-01-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.GAME-Welcome-Lottery/",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-01-01",
+          "validThrough": "2026-01-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game Welcome Lottery promotion -->
   </head>
   <body>
     <div id="news-background"></div>
