--- a/News-Articles/BC.Game-Weekly-Gift-Codes/index.html
+++ b/News-Articles/BC.Game-Weekly-Gift-Codes/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game Weekly Gift Codes promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game Weekly Gift Codes",
+        "description": "Claim 20 free spins every week by entering the weekly gift code in eligible BC.Game slots.",
+        "url": "https://www.all4wins.com/News-Articles/BC.Game-Weekly-Gift-Codes/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-gift-code.webp",
+        "startDate": "2024-01-07",
+        "endDate": "2024-02-25",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.Game-Weekly-Gift-Codes/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-01-07",
+          "validThrough": "2024-02-25"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game Weekly Gift Codes promotion -->
   </head>
   <body>
     <div id="news-background"></div>
