--- a/News-Articles/BCGAME-200-Sports-Bet-Bonus/index.html
+++ b/News-Articles/BCGAME-200-Sports-Bet-Bonus/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.GAME 200% Sports Bet Bonus -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.GAME 200% Sports Bet Bonus",
+        "description": "New players can claim a 200% bonus on their first sports bet up to $500 USD. Use promo code BCLCFC during registration. Offer valid from August 16, 2024, to May 25, 2025.",
+        "url": "https://www.all4wins.com/News-Articles/BCGAME-200-Sports-Bet-Bonus/",
+        "image": "https://www.all4wins.com/img/news-banners/bc.games-200bonus2.webp",
+        "startDate": "2024-08-16",
+        "endDate": "2025-05-25",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BCGAME-200-Sports-Bet-Bonus/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-08-16",
+          "validThrough": "2025-05-25"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.GAME 200% Sports Bet Bonus -->
   </head>
   <body>
     <div id="news-background"></div>
