--- a/News-Articles/BCGame_Baccarat_Cash_Drops/index.html
+++ b/News-Articles/BCGame_Baccarat_Cash_Drops/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game Baccarat Cash Drops promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game Baccarat Cash Drops",
+        "description": "Play Evolution Baccarat tables for your chance to win from €125,000 in weekly cash drops! Over 5,800 prizes awarded each week with the top prize being €5,000.",
+        "url": "https://www.all4wins.com/News-Articles/BCGame_Baccarat_Cash_Drops/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-bacarat-banner.webp",
+        "startDate": "2025-07-07",
+        "endDate": "2025-09-28",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BCGame_Baccarat_Cash_Drops/",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "KR",
+          "validFrom": "2025-07-07",
+          "validThrough": "2025-09-28"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game Baccarat Cash Drops promotion -->
   </head>
   <body>
     <div id="news-background"></div>
