--- a/News-Articles/BCGame_June_Spins_Jubilee–20,000Dolars_in_Free_Spins/index.html
+++ b/News-Articles/BCGame_June_Spins_Jubilee–20,000Dolars_in_Free_Spins/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game June Spins Jubilee – $20,000 in Free Spins -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game June Spins Jubilee",
+        "description": "Celebrate June with BC.Game's Spins Jubilee and grab your share of $20,000 in Free Spins. Play selected slots and climb the leaderboard to win big!",
+        "url": "https://www.all4wins.com/News-Articles/BCGame_June_Spins_Jubilee–20,000Dolars_in_Free_Spins/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame_june_spins_banner.webp",
+        "startDate": "2025-06-01",
+        "endDate": "2025-06-30",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BCGame_June_Spins_Jubilee–20,000Dolars_in_Free_Spins/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-06-01",
+          "validThrough": "2025-06-30"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game June Spins Jubilee – $20,000 in Free Spins -->
   </head>
   <body>
     <div id="news-background"></div>
