--- a/News-Articles/BCGame_Microgaming_Summer_Free_Spins/index.html
+++ b/News-Articles/BCGame_Microgaming_Summer_Free_Spins/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game Microgaming Summer Free Spins -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game Microgaming Summer Free Spins",
+        "description": "Celebrate summer with BC.Game's Microgaming Summer Free Spins promotion. Play Microgaming slots daily for a chance to win 20 free spins per day, with no minimum bet required.",
+        "url": "https://www.all4wins.com/News-Articles/BCGame_Microgaming_Summer_Free_Spins/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-microgames-banner.webp",
+        "startDate": "2025-07-08",
+        "endDate": "2025-08-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BCGame_Microgaming_Summer_Free_Spins/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-07-08",
+          "validThrough": "2025-08-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game Microgaming Summer Free Spins -->
   </head>
   <body>
     <div id="news-background"></div>
