--- a/News-Articles/BCGame_Sports_Korea_Free_Bet_Bonus/index.html
+++ b/News-Articles/BCGame_Sports_Korea_Free_Bet_Bonus/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game Sports Korea Free Bet Bonus – July 2025 -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game Sports Korea Free Bet Bonus – July 2025",
+        "description": "New users who registered with Sports Korea in June or July 2025 can claim up to $18 in free betting credits. Conditions apply based on registration month and betting activity.",
+        "url": "https://www.all4wins.com/News-Articles/BCGame_Sports_Korea_Free_Bet_Bonus/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-sports-july-banner.webp",
+        "startDate": "2025-07-01",
+        "endDate": "2025-07-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BCGame_Sports_Korea_Free_Bet_Bonus/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "KR",
+          "validFrom": "2025-07-01",
+          "validThrough": "2025-07-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game Sports Korea Free Bet Bonus – July 2025 -->
   </head>
   <body>
     <div id="news-background"></div>
