--- a/News-Articles/BCGame_UFC_KO_TKO_Refund_Bet_With_Confidence/index.html
+++ b/News-Articles/BCGame_UFC_KO_TKO_Refund_Bet_With_Confidence/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game UFC KO/TKO Refund – Bet With Confidence -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game UFC KO/TKO Refund – Bet With Confidence",
+        "description": "Place a real money pre-match single bet on a UFC Main Card fight. If your selected fighter loses by KO or TKO in Round 1, receive a 100% Free Bet refund up to $500 in BCD.",
+        "url": "https://www.all4wins.com/News-Articles/BCGame_UFC_KO_TKO_Refund_Bet_With_Confidence/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-ufc-ko-banner.webp",
+        "startDate": "2025-04-09",
+        "endDate": "2026-01-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BCGame_UFC_KO_TKO_Refund_Bet_With_Confidence/",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "BCD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-04-09",
+          "validThrough": "2026-01-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game UFC KO/TKO Refund – Bet With Confidence -->
   </head>
   <body>
     <div id="news-background"></div>
