--- a/News-Articles/BCGame_₹1000_Free_Cash_Reward/index.html
+++ b/News-Articles/BCGame_₹1000_Free_Cash_Reward/index.html
@@ -59,6 +59,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game ₹1000 Free Cash Reward promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game ₹1000 Free Cash Reward",
+        "description": "Claim a ₹1000 free cash reward with no withdrawal limits and no wagering requirements. Offer expires on January 1, 2026.",
+        "url": "https://www.all4wins.com/News-Articles/BC.GAME-Welcome-Lottery/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-welcome-lottery.webp",
+        "startDate": "2024-01-01",
+        "endDate": "2026-01-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BC.GAME-Welcome-Lottery/",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "INR",
+          "eligibleRegion": "IN",
+          "validFrom": "2024-01-01",
+          "validThrough": "2026-01-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game ₹1000 Free Cash Reward promotion -->
   </head>
   <body>
     <div id="news-background"></div>
