--- a/News-Articles/Bc.Game-Spadegaming-PLAY-WIN-Tournament/index.html
+++ b/News-Articles/Bc.Game-Spadegaming-PLAY-WIN-Tournament/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game Spadegaming PLAY & WIN Tournament promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game Spadegaming PLAY & WIN Tournament",
+        "description": "Participate in BC.Game's Spadegaming PLAY & WIN Tournament for a chance to win a share of $570,700 by placing real money bets on eligible Spadegaming slots.",
+        "url": "https://www.all4wins.com/News-Articles/Bc.Game-Spadegaming-PLAY-WIN-Tournament/",
+        "image": "https://www.all4wins.com/img/news-banners/Bc.Game-Spadegaming-PLAY-WIN-Tournament.webp",
+        "startDate": "2025-02-24",
+        "endDate": "2025-05-26",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Bc.Game-Spadegaming-PLAY-WIN-Tournament/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-02-24",
+          "validThrough": "2025-05-26"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game Spadegaming PLAY & WIN Tournament promotion -->
   </head>
   <body>
     <div id="news-background"></div>
