--- a/News-Articles/Bc.Game-TaDa-Weekly-Gift-Code-30-Free-Spins/index.html
+++ b/News-Articles/Bc.Game-TaDa-Weekly-Gift-Code-30-Free-Spins/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game TaDa Weekly Gift Code 30 Free Spins promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game TaDa Weekly Gift Code 30 Free Spins",
+        "description": "Claim 30 free spins every week by entering the weekly gift code in eligible TaDa games at BC.Game.",
+        "url": "https://www.all4wins.com/News-Articles/Bc.Game-TaDa-Weekly-Gift-Code-30-Free-Spins/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-data-fortune-news.webp",
+        "startDate": "2024-03-04",
+        "endDate": "2024-04-29",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Bc.Game-TaDa-Weekly-Gift-Code-30-Free-Spins/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-03-04",
+          "validThrough": "2024-04-29"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game TaDa Weekly Gift Code 30 Free Spins promotion -->
   </head>
   <body>
     <div id="news-background"></div>
