--- a/News-Articles/Bc.Game-UCL-Weekly-Lucky-Draw/index.html
+++ b/News-Articles/Bc.Game-UCL-Weekly-Lucky-Draw/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game UCL Weekly Lucky Draw promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game UCL Weekly Lucky Draw",
+        "description": "Place real money bets on UEFA Champions League matches to earn tickets for the weekly lucky draw. The more you bet, the more tickets you earn, and the better your chances of winning amazing prizes!",
+        "url": "https://www.all4wins.com/News-Articles/Bc.Game-UCL-Weekly-Lucky-Draw/",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-ucl-lucky.webp",
+        "startDate": "2024-09-23",
+        "endDate": "2025-02-02",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Bc.Game-UCL-Weekly-Lucky-Draw/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-09-23",
+          "validThrough": "2025-02-02"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game UCL Weekly Lucky Draw promotion -->
   </head>
   <body>
     <div id="news-background"></div>
