--- a/News-Articles/Bc.Game-UEFA-Champions-League-Stake-Back-Challenge/index.html
+++ b/News-Articles/Bc.Game-UEFA-Champions-League-Stake-Back-Challenge/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BC.Game UEFA Champions League Stake Back Challenge promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BC.Game UEFA Champions League Stake Back Challenge",
+        "description": "Place single bets of $10 or more on UEFA Champions League matches to earn Lucky Draw tickets. Winning bets earn triple tickets. Weekly winners receive stake back Freebets up to 10% of their stake.",
+        "url": "https://www.all4wins.com/News-Articles/Bc.Game-UEFA-Champions-League-Stake-Back-Challenge/",
+        "image": "https://www.all4wins.com/img/news-banners/Bc.Game-UEFA-Champions-League-Stake-Back-Challenge.webp",
+        "startDate": "2025-02-10",
+        "endDate": "2025-05-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Bc.Game-UEFA-Champions-League-Stake-Back-Challenge/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-02-10",
+          "validThrough": "2025-05-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BC.Game UEFA Champions League Stake Back Challenge promotion -->
   </head>
   <body>
     <div id="news-background"></div>
