--- a/News-Articles/BetFury-Halloween-Dynamic-Drops-Tournament/index.html
+++ b/News-Articles/BetFury-Halloween-Dynamic-Drops-Tournament/index.html
@@ -62,6 +62,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BetFury Halloween Dynamic Drops Tournament -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BetFury Halloween Dynamic Drops Tournament",
+        "description": "Join BetFury's Halloween Dynamic Drops Tournament and compete for a share of a guaranteed €20,000 prize pool! Play spooky BGaming slots from October 1 to October 31, 2024, and earn random crypto rewards with each spin.",
+        "url": "https://www.all4wins.com/News-Articles/BetFury-Halloween-Dynamic-Drops-Tournament/",
+        "image": "https://www.all4wins.com/img/news-banners/betfury-holloween.webp",
+        "startDate": "2024-10-01",
+        "endDate": "2024-10-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BetFury-Halloween-Dynamic-Drops-Tournament/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "1",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-10-01",
+          "validThrough": "2024-10-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BetFury Halloween Dynamic Drops Tournament -->
   </head>
   <body>
     <div id="news-background"></div>
