--- a/News-Articles/BetFuty-Aviator-Crash-Game/index.html
+++ b/News-Articles/BetFuty-Aviator-Crash-Game/index.html
@@ -60,6 +60,39 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BetFury Aviator Crash Game -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Game",
+        "name": "BetFury Aviator Crash Game",
+        "description": "BetFury's Aviator Crash Game is a thrilling multiplayer game where players bet on a plane's flight. The goal is to cash out before the plane crashes, with multipliers increasing as the plane ascends.",
+        "url": "https://www.all4wins.com/News-Articles/Betfuty-Aviator-Crash-Game/",
+        "image": "https://www.all4wins.com/img/news-banners/aviator-banner.webp",
+        "gameMode": "Multiplayer",
+        "gamePlatform": "Web",
+        "genre": "Crash Game",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Betfuty-Aviator-Crash-Game/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/InStock"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "BetFury",
+          "url": "https://betfury.io"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BetFury Aviator Crash Game -->
   </head>
   <body>
     <div id="news-background"></div>
