--- a/News-Articles/Duelbits_NBA_Playoffs_Promo_2025_Win_100_Dolars_Free_Bet_token/index.html
+++ b/News-Articles/Duelbits_NBA_Playoffs_Promo_2025_Win_100_Dolars_Free_Bet_token/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Duelbits NBA Playoffs Promo 2025 -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Duelbits NBA Playoffs Promo 2025: Win Free Bet Token up to $100",
+        "description": "Bet on any NBA Playoffs 2025 game, and if your team scores 115 or more points, you win a Free Bet token up to $100, regardless of the game's outcome. Minimum bet: $5.00. Minimum odds: 1.50.",
+        "url": "https://www.all4wins.com/News-Articles/Duelbits_NBA_Playoffs_Promo_2025_Win_100_Dolars_Free_Bet_token/",
+        "image": "https://www.all4wins.com/img/news-banners/duelbits-nba-promo-banner.webp",
+        "startDate": "2025-04-19",
+        "endDate": "2025-06-13",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Duelbits_NBA_Playoffs_Promo_2025_Win_100_Dolars_Free_Bet_token/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "5",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-04-19",
+          "validThrough": "2025-06-13"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Duelbits NBA Playoffs Promo 2025 -->
   </head>
   <body>
     <div id="news-background"></div>
