--- a/News-Articles/Esports-Event-Calendar-2025/index.html
+++ b/News-Articles/Esports-Event-Calendar-2025/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Esports Event Calendar 2025 -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Event",
+        "name": "Esports Event Calendar 2025",
+        "description": "Stay up-to-date with the ultimate esports tournament calendar for 2025. Explore key esports events, dates, and locations all in one place, featuring major leagues and tournaments across various games.",
+        "url": "https://www.all4wins.com/News-Articles/Esports-Event-Calendar-2025/",
+        "image": "https://www.all4wins.com/img/news-banners/espoerts-events-banner.webp",
+        "startDate": "2025-01-01",
+        "endDate": "2025-12-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Esports-Event-Calendar-2025/",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-01-01",
+          "validThrough": "2025-12-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Esports Event Calendar 2025 -->
   </head>
   <body>
     <div id="news-background"></div>
