--- a/News-Articles/GG.Bet-Chinese-New-Year-Bonuses-and-Free-Spins/index.html
+++ b/News-Articles/GG.Bet-Chinese-New-Year-Bonuses-and-Free-Spins/index.html
@@ -57,6 +57,45 @@
         ]
       }
     </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Chinese New Year Bonuses and Free Spins",
+        "description": "Celebrate the Chinese New Year with GG.Bet's special promotions! Enjoy up to a 150% bonus and up to 60 free spins on the Cat's Blessing slot by Evoplay. Valid from January 19 to January 26, 2025.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-Chinese-New-Year-Bonuses-and-Free-Spins/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-chinese-newyear.webp",
+        "startDate": "2025-01-19",
+        "endDate": "2025-01-26",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GG.Bet-Chinese-New-Year-Bonuses-and-Free-Spins/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-01-19",
+          "validThrough": "2025-01-26"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Chinese New Year Bonuses and Free Spins -->
   </head>
   <body>
     <div id="news-background"></div>
