--- a/News-Articles/GG.Bet-Incredible-Tennis-Bonuses-All-Month-Long/index.html
+++ b/News-Articles/GG.Bet-Incredible-Tennis-Bonuses-All-Month-Long/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Incredible Tennis Bonuses All Month Long Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Incredible Tennis Bonuses All Month Long Promotion",
+        "description": "Celebrate the tennis season with GG.Bet's exclusive promotions. Enjoy various bonuses during the Mubadala Abu Dhabi Open, Qatar Total Energies Open 2025, Dubai Duty Free Tennis Championships, and San Diego Open from February 3 to March 2, 2025.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-Incredible-Tennis-Bonuses-All-Month-Long/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-tenis-bonuses.webp",
+        "startDate": "2025-02-03",
+        "endDate": "2025-03-02",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GG.Bet-Incredible-Tennis-Bonuses-All-Month-Long/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-02-03",
+          "validThrough": "2025-03-02"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Incredible Tennis Bonuses All Month Long Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
