--- a/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150,000_Dolars_in_Random_Prize_Drops/index.html
+++ b/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150,000_Dolars_in_Random_Prize_Drops/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BGaming Drops Frenzy Fest at Duelbits -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BGaming Drops Frenzy Fest at Duelbits",
+        "description": "Join Duelbits' BGaming Drops Frenzy Fest and win your share of a $150,000 prize pool! Play any eligible BGaming slot from March 1 to December 31, 2025, and every spin could trigger a random cash prize.",
+        "url": "https://www.all4wins.com/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150,000_Dolars_in_Random_Prize_Drops/",
+        "image": "https://www.all4wins.com/img/news-banners/duelbits-drops-2025-banner.webp",
+        "startDate": "2025-03-01",
+        "endDate": "2025-12-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150,000_Dolars_in_Random_Prize_Drops/",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-03-01",
+          "validThrough": "2025-12-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BGaming Drops Frenzy Fest at Duelbits -->
   </head>
   <body>
     <div id="news-background"></div>
