--- a/News-Articles/BetFury-100-Free-Spins-No-Deposit/index.html
+++ b/News-Articles/BetFury-100-Free-Spins-No-Deposit/index.html
@@ -59,6 +59,44 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BetFury 100 Free Spins No Deposit (Ongoing) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BetFury 100 Free Spins No Deposit",
+        "description": "New players can claim 100 free spins upon registration with no deposit required. Activate within 24 hours and use on a selected slot game. Winnings subject to 40x wagering requirement.",
+        "url": "https://www.all4wins.com/News-Articles/BetFury-100-Free-Spins-No-Deposit/",
+        "image": "https://www.all4wins.com/img/news-banners/betfury-bananza.webp",
+        "startDate": "2024-08-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BetFury-100-Free-Spins-No-Deposit/",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-08-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BetFury 100 Free Spins No Deposit (Ongoing) -->
   </head>
   <body>
     <div id="news-background"></div>
