--- a/News-Articles/BetFury-Battles/index.html
+++ b/News-Articles/BetFury-Battles/index.html
@@ -61,6 +61,44 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BetFury Battles -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BetFury Battles",
+        "description": "Compete in BetFury's exciting gaming battles for a chance to win massive prizes, including up to $100,000 in various tournaments. Join daily, sports, provider-specific, thematic, and VIP battles to showcase your skills and earn rewards.",
+        "url": "https://www.all4wins.com/News-Articles/BetFury-Battles/",
+        "image": "https://www.all4wins.com/img/news-banners/betfury-battles-banner.webp",
+        "startDate": "2024-08-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BetFury-Battles/",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-08-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BetFury Battles -->
   </head>
   <body>
     <div id="news-background"></div>
