--- a/News-Articles/BetFury-Big-Money-Bang-Tournament/index.html
+++ b/News-Articles/BetFury-Big-Money-Bang-Tournament/index.html
@@ -62,6 +62,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BetFury Big Money Bang Tournament (Ended) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BetFury Big Money Bang Tournament",
+        "description": "Join the Big Money Bang Tournament at BetFury! Play 3 Oaks slots from October 3–16, 2024, and compete for a share of the €120,000 prize pool. Earn points through various mechanics like Win Race, Multiplier Race, and Highest Single Round Payout.",
+        "url": "https://www.all4wins.com/News-Articles/BetFury-Big-Money-Bang-Tournament/",
+        "image": "https://www.all4wins.com/img/news-banners/betfury-turnament.webp",
+        "startDate": "2024-10-03",
+        "endDate": "2024-10-16",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BetFury-Big-Money-Bang-Tournament/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-10-03",
+          "validThrough": "2024-10-16"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BetFury Big Money Bang Tournament -->
   </head>
   <body>
     <div id="news-background"></div>
