--- a/News-Articles/BetFury-Blackjack-Holiday-Tournaments/index.html
+++ b/News-Articles/BetFury-Blackjack-Holiday-Tournaments/index.html
@@ -59,6 +59,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BetFury Blackjack Holiday Tournaments -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BetFury Blackjack Holiday Tournaments",
+        "description": "Join BetFury's Blackjack Holiday Tournaments and compete for a share of €250,000! Play live casino blackjack, place a minimum bet of €50, and earn points for each win to climb the leaderboard for exciting crypto prizes.",
+        "url": "https://www.all4wins.com/News-Articles/BetFury-Blackjack-Holiday-Tournaments/",
+        "image": "https://www.all4wins.com/img/news-banners/betfury-blackjack-tournamnet-banner.webp",
+        "startDate": "2024-11-15",
+        "endDate": "2025-01-10",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BetFury-Blackjack-Holiday-Tournaments/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-11-15",
+          "validThrough": "2025-01-10"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BetFury Blackjack Holiday Tournaments -->
   </head>
   <body>
     <div id="news-background"></div>
