--- a/News-Articles/BetFury_Winter_Wins_Fest _$450,000_Holiday_Promotion/index.html
+++ b/News-Articles/BetFury_Winter_Wins_Fest _$450,000_Holiday_Promotion/index.html
@@ -62,6 +62,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BetFury Winter Wins Fest – $450,000 Holiday Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BetFury Winter Wins Fest – $450,000 Holiday Promotion",
+        "description": "Celebrate the holiday season with BetFury's Winter Wins Fest! From December 1, 2024, to January 31, 2025, play BGaming slots for a chance to win a share of $450,000 in random cash prizes, free spins, and more.",
+        "url": "https://www.all4wins.com/News-Articles/BetFury_Winter_Wins_Fest_$450,000_Holiday_Promotion/",
+        "image": "https://www.all4wins.com/img/news-banners/betfuty-winter-fest-banner.webp",
+        "startDate": "2024-12-01",
+        "endDate": "2025-01-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/BetFury_Winter_Wins_Fest_$450,000_Holiday_Promotion/",
+          "availability": "https://schema.org/SoldOut",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2024-12-01",
+          "validThrough": "2025-01-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BetFury Winter Wins Fest – $450,000 Holiday Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
