--- a/News-Articles/Betfury-Promo-Code/index.html
+++ b/News-Articles/Betfury-Promo-Code/index.html
@@ -59,6 +59,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for BetFury Promo Code -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "BetFury Promo Code",
+        "description": "Unlock exclusive bonuses with BetFury's promo codes! Redeem codes for free spins, deposit bonuses, free bets, and crypto rewards. Stay updated through BetFury's social media, emails, and website for the latest codes.",
+        "url": "https://www.all4wins.com/News-Articles/Betfury-Promo-Code/",
+        "image": "https://www.all4wins.com/img/news-banners/betfury-promo-code.webp",
+        "startDate": "2025-01-01",
+        "endDate": "2025-12-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Betfury-Promo-Code/",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-01-01",
+          "validThrough": "2025-12-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for BetFury Promo Code -->
   </head>
   <body>
     <div id="news-background"></div>
