--- a/News-Articles/Duelbits-Beyond-Limits-This-Christmas/index.html
+++ b/News-Articles/Duelbits-Beyond-Limits-This-Christmas/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Duelbits Beyond Limits This Christmas -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Duelbits Beyond Limits This Christmas",
+        "description": "Celebrate the holiday season with Duelbits' Beyond Limits Christmas promotion! Enjoy a $150,000 Boxing Day raffle, daily and weekly leaderboards, and exciting tournaments throughout December 2025.",
+        "url": "https://www.all4wins.com/News-Articles/Duelbits_Beyond_Limits_This_Christmas/",
+        "image": "https://www.all4wins.com/img/news-banners/duelbits-ch-bonus.webp",
+        "startDate": "2025-12-01",
+        "endDate": "2025-12-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Duelbits_Beyond_Limits_This_Christmas/",
+          "availability": "https://schema.org/InStock",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "validFrom": "2025-12-01",
+          "validThrough": "2025-12-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Duelbits Beyond Limits This Christmas -->
   </head>
   <body>
     <div id="news-background"></div>
