--- a/News-Articles/Duelbits_Thor_Rage_Slot_Win_Up_to_10000x/index.html
+++ b/News-Articles/Duelbits_Thor_Rage_Slot_Win_Up_to_10000x/index.html
@@ -58,6 +58,39 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Duelbits Thor’s Rage Slot – Win Up to 10,000x -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Game",
+        "name": "Thor’s Rage Slot",
+        "description": "Experience the electrifying Thor’s Rage slot game exclusively on Duelbits. With high volatility and the potential to win up to 10,000x your bet, this 6x5 reel game offers scatter pays, wild multipliers, and free spins with increasing multipliers.",
+        "url": "https://www.all4wins.com/News-Articles/Duelbits_Thor_Rage_Slot_Win_Up_to_10000x/",
+        "image": "https://www.all4wins.com/img/news-banners/duelbits-thor-banner.webp",
+        "gameMode": "SinglePlayer",
+        "gamePlatform": "Web",
+        "genre": "Slot",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Duelbits_Thor_Rage_Slot_Win_Up_to_10000x/",
+          "price": "0.10",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/InStock"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Duelbits",
+          "url": "https://duelbits.com"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Duelbits Thor’s Rage Slot – Win Up to 10,000x -->
   </head>
   <body>
     <div id="news-background"></div>
