--- a/News-Articles/GG.Bet-Bet-on-LPL-Split-2-with-Cashback-Offers/index.html
+++ b/News-Articles/GG.Bet-Bet-on-LPL-Split-2-with-Cashback-Offers/index.html
@@ -59,6 +59,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet LPL Split 2 Cashback Offers -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet LPL Split 2 Cashback Offers",
+        "description": "Bet on the LPL Split 2 with exclusive cashback offers at GG.Bet. Enjoy up to $800 in cashback based on your net losses during the promotion periods from April 1 to April 30, 2025.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-Bet-on-LPL-Split-2-with-Cashback-Offers/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-LpL-banner.webp",
+        "startDate": "2025-04-01",
+        "endDate": "2025-04-30",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GG.Bet-Bet-on-LPL-Split-2-with-Cashback-Offers/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-04-01",
+          "validThrough": "2025-04-30"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet LPL Split 2 Cashback Offers -->
   </head>
   <body>
     <div id="news-background"></div>
