--- a/News-Articles/GG.Bet-CS2-Shanghai-Major/index.html
+++ b/News-Articles/GG.Bet-CS2-Shanghai-Major/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet CS2 Shanghai Major Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet CS2 Shanghai Major Promotion",
+        "description": "Celebrate the CS2 Shanghai Major with GG.Bet's exclusive promotions. Enjoy daily bonuses, winback offers, and free bets during the tournament from November 29 to December 15, 2024.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-CS2-Shanghai-Major/",
+        "image": "https://www.all4wins.com/img/news-banners/gg.bet-cs2-shanghai-major.webp",
+        "startDate": "2024-11-29",
+        "endDate": "2024-12-15",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GG.Bet-CS2-Shanghai-Major/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-11-29",
+          "validThrough": "2024-12-15"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet CS2 Shanghai Major Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
