--- a/News-Articles/GG.Bet-ESL-Bangkok/index.html
+++ b/News-Articles/GG.Bet-ESL-Bangkok/index.html
@@ -59,6 +59,47 @@
       ]
     }
   </script>
+
+  <!-- JSON-LD for GG.Bet ESL Bangkok 2024 Promotion -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Promotion",
+      "name": "GG.Bet ESL Bangkok 2024 Promotion",
+      "description": "Celebrate the ESL One Bangkok 2024 with GG.Bet's exclusive promotions. Enjoy up to 200% deposit bonus and $50 free bet during the tournament from December 9 to December 15, 2024.",
+      "url": "https://www.all4wins.com/News-Articles/GG.Bet-ESL-Bangkok/",
+      "image": "https://www.all4wins.com/img/news-banners/ggbet-esl-bangkok.webp",
+      "startDate": "2024-12-09",
+      "endDate": "2024-12-15",
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-ESL-Bangkok/",
+        "price": "0",
+        "priceCurrency": "USD",
+        "eligibleRegion": "Worldwide",
+        "availability": "https://schema.org/SoldOut",
+        "validFrom": "2024-12-09",
+        "validThrough": "2024-12-15"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "@id": "https://www.all4wins.com/#organization",
+        "name": "All4Wins",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+          "width": 200,
+          "height": 200
+        }
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Andrei"
+      }
+    }
+  </script>
+  <!-- End JSON-LD for GG.Bet ESL Bangkok 2024 Promotion -->
+
   <body>
     <div id="news-background"></div>
     <!-- Google Tag Manager (noscript) -->
