--- a/News-Articles/GG.Bet-F1-Insurance/index.html
+++ b/News-Articles/GG.Bet-F1-Insurance/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Formula 1 Betting Insurance Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Formula 1 Betting Insurance Promotion",
+        "description": "Place a single bet on any Formula 1 race with odds between 1.75 and 50, and if your bet loses, receive a refund based on your deposit amount. Insurance amounts range from $25 to $200, depending on your deposit size.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-F1-Insurance/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-f1.webp",
+        "startDate": "2024-10-17",
+        "endDate": "2024-11-03",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GG.Bet-F1-Insurance/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-17",
+          "validThrough": "2024-11-03"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Formula 1 Betting Insurance Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
