--- a/News-Articles/GG.Bet-Mystical-Night-of-Wins/index.html
+++ b/News-Articles/GG.Bet-Mystical-Night-of-Wins/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Mystical Night of Wins Halloween Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Mystical Night of Wins Halloween Promotion",
+        "description": "Celebrate Halloween with GG.Bet's thrilling 'Mystical Night of Wins' promotion! Enjoy free bets and free spins on Joker's Wild Ride – Halloween by Spinomenal from October 25 to November 4, 2024.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-Mystical-Night-of-Wins/",
+        "image": "https://www.all4wins.com/img/news-banners/gg.bet-scarry-fs.webp",
+        "startDate": "2024-10-25",
+        "endDate": "2024-11-04",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GG.Bet-Mystical-Night-of-Wins/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-25",
+          "validThrough": "2024-11-04"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Mystical Night of Wins Halloween Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
